--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&display=swap');
+
+html, body {
+  scroll-behavior: smooth;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'aldrich', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #0E2954;
+  background-image: url('assets/bg.png'); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.skills-icons-container {
+  margin: 0px 25px;
+}
+
+.icon-container {
+  margin: 0px 15px;
+}
+
+
+
+@media (min-width: 1024px) {
+  .icon-text {
+      font-size: 16px;
+  }
+}
+
+  .icon-text {
+    font-size: 12px;
+  }
+
+  .project-icon-container {
+    margin-right: 2px;
+  }
+
+
+  .project-button {
+    background-color: #0E2954;
+    color: #e0e0e0;
+    padding: 3px 10px;
+    font-size: 14px;
+    font-weight: 100;
+  }
+
+  @media (min-width: 768px) {
+    .project-button {
+      padding: 6px 15px;
+      font-size: 16px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .project-button {
+      padding: 9px 20px;
+      font-size: 18px;
+    }
+  }
+
+  .project-button:last-child {
+    margin-left: 4px; 
+  }
