--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #0E2954;
-  background-image: url('assets/bg.png'); 
+  background: rgb(221,242,253);
+  background: linear-gradient(130deg, rgba(221,242,253,1) 34%, rgba(155,190,200,1) 81%);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
